Rename example import

--- a/packages/components/Collection/example/Example.html
+++ b/packages/components/Collection/example/Example.html
@@ -89,7 +89,7 @@
       Icon: '@mamba/icon',
       Row: '@mamba/collection/Row.html',
       Collection: '@mamba/collection/Collection.html',
-      Switch: '@mamba/switch/Switch.html',
+      Switch: '@mamba/switch',
     },
   };
 </script>
