--- a/packages/components/Collection/example/Example.html
+++ b/packages/components/Collection/example/Example.html
@@ -3,7 +3,7 @@
     <Row label="1 - Opção" rightLabel="Reposta" />
 
     <Row label="1 - Opção">
-      <div slot="controller">
+      <div slot="right-sign">
         <Switch/>
       </div>
     </Row>
@@ -12,7 +12,7 @@
       label="1 - Opção"
       description="Mais uma opção de controle na hora da venda, essa etapa pode ser pulada"
     >
-      <div slot="controller">
+      <div slot="right-sign">
         <Switch/>
       </div>
     </Row>
@@ -20,15 +20,31 @@
     <Row
       label="Hoje, 13/06/2018"
       secondaryColor="#4EBF1A"
-      icon={{symbol: 'calendar'}}
       rightLabel="Alterar"
-    />
+    >
+    </Row>
+
+    <Row
+      leftLabel="Hoje, 13/06/2018"
+      rightLabel="Alterar"
+      secondaryColor="#4EBF1A"
+    >
+      <div slot="left-sign">
+        <Icon symbol="calendar" color="#4EBF1A" />
+      </div>
+      <div slot="right-sign">
+        <Icon symbol="chevron-right" color="#4EBF1A" />
+      </div>
+    </Row>
 
     <Row
       label="Conectado"
       primaryColor="#4EBF1A"
-      icon={{ symbol: 'wifi', level: 2 }}
-    />
+    >
+      <div slot="left-sign">
+        <Icon symbol="wifi" color="#4EBF1A" level="2" />
+      </div>
+    </Row>
 
     <Row
       label="Conectado"
@@ -37,7 +53,7 @@
     />
 
     <Row label="1 - Opção">
-      <div slot="controller">
+      <div slot="right-sign">
         <Switch/>
       </div>
       <div slot="description">
@@ -48,12 +64,12 @@
 
   <Collection title="Dispositivo">
     <Row label="2. Som do Teclado" rightLabel="Baixo">
-      <div slot="controller">
+      <div slot="right-sign">
         <Icon symbol="settings"/>
       </div>
     </Row>
     <Row label="3. Luz do Teclado">
-      <div slot="controller">
+      <div slot="right-sign">
         <Icon symbol="settings"/>
       </div>
     </Row>
@@ -61,7 +77,7 @@
 
   <Collection>
     <Row label="Rede Wifi Stone Co.">
-      <div slot="controller">
+      <div slot="right-sign">
         <Icon symbol="wifi" color="green" level={2}/>
       </div>
       <p slot="description">
@@ -69,7 +85,7 @@
       </p>
     </Row>
     <Row label="Rede Wifi Sharon" description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic maiores mollitia asperiores delectus, deleniti nobis fugiat quas eaque aspernatur atque ex voluptate modi fuga, iusto minus magni reprehenderit libero numquam.">
-      <div slot="controller">
+      <div slot="right-sign">
         <Icon symbol="wifi" color="green" level={0}/>
       </div>
     </Row>
