--- a/packages/components/Switch/Switch.html
+++ b/packages/components/Switch/Switch.html
@@ -4,7 +4,7 @@
     {disabled}
     bind:checked
     on:change="fire('change', { value: checked })"
-    data-controller-trigger="click"
+    data-trigger="click"
 	/>
 </label>
 
