Add button theme variables

--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -17,3 +17,6 @@ $input-error-color: $red-light;
 
 $dialog-negative-color: $red-light;
 $dialog-positive-color: $stone-green;
+
+$button-primary-color: $green;
+$button-text-color: $white;
