--- a/packages/components/Dialog/example/Example.html
+++ b/packages/components/Dialog/example/Example.html
@@ -34,17 +34,34 @@
     {/await}
   </PromisedDialog>
 
-  <h4>Com confirmação</h4>
+  <h4>Com botões de confirmação</h4>
   <div class="row">
     <button on:click="openDialog('confirmationDialog')">
       Open dialog
     </button>
   </div>
 
-  <ConfirmationDialog ref:confirmationDialog 
-  title="IMPRESSORA SEM PAPEL"
-  on:negative="console.log('on:negative')"
-  on:positive="console.log('on:positive')"
+  <h4>Com botões de confirmação textuais</h4>
+  <div class="row">
+    <button on:click="openDialog('confirmationDialogLabelled')">
+      Open dialog
+    </button>
+  </div>
+
+  <ConfirmationDialog ref:confirmationDialog
+    title="IMPRESSORA SEM PAPEL"
+    on:negative="console.log('on:negative')"
+    on:positive="console.log('on:positive')"
+  >
+    Tentar imprimir novamente?
+  </ConfirmationDialog>
+
+  <ConfirmationDialog ref:confirmationDialogLabelled
+    title="INTERROMPER?"
+    positiveLabel="Não"
+    negativeLabel="Interromper"
+    on:negative="console.log('on:negative')"
+    on:positive="console.log('on:positive')"
   >
     Tentar imprimir novamente?
   </ConfirmationDialog>
