Add correct chevron width

--- a/packages/components/Collection/example/Example.html
+++ b/packages/components/Collection/example/Example.html
@@ -33,7 +33,7 @@
         <Icon symbol="calendar" color="#4EBF1A" />
       </div>
       <div slot="right-sign">
-        <Icon symbol="chevron-right" color="#4EBF1A" />
+        <Icon symbol="chevron-right" color="#4EBF1A" width="10px" />
       </div>
     </Row>
 
