--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -10,6 +10,9 @@ $default-text-color: $gray-darker;
 
 /** Row component */
 $row-border-color: $gray-lighter;
+$row-bg-color: $white;
+$row-primary-color: $gray-darker;
+$row-secondary-color: $gray-light;
 
 /** Input component */
 $input-border-color: $gray-lighter;
