--- a/packages/components/Collection/example/Example.html
+++ b/packages/components/Collection/example/Example.html
@@ -1,16 +1,75 @@
 <div class="wrapper">
-  <Collection title="Rede">
-    <Row label="1. Configurar" href="/network/configure"/>
+  <Collection title="Tipos">
+    <Row label="1 - Opção" rightLabel="Reposta" />
+
+    <Row label="1 - Opção">
+      <div slot="right-sign">
+        <Switch/>
+      </div>
+    </Row>
+
+    <Row
+      label="1 - Opção"
+      description="Mais uma opção de controle na hora da venda, essa etapa pode ser pulada"
+    >
+      <div slot="right-sign">
+        <Switch/>
+      </div>
+    </Row>
+
+    <Row
+      label="Hoje, 13/06/2018"
+      secondaryColor="#4EBF1A"
+      rightLabel="Alterar"
+    >
+    </Row>
+
+    <Row
+      leftLabel="Hoje, 13/06/2018"
+      rightLabel="Alterar"
+      secondaryColor="#4EBF1A"
+    >
+      <div slot="left-sign">
+        <Icon symbol="calendar" color="#4EBF1A" />
+      </div>
+      <div slot="right-sign">
+        <Icon symbol="chevron-right" color="#4EBF1A" width="10px" />
+      </div>
+    </Row>
+
+    <Row
+      label="Conectado"
+      primaryColor="#4EBF1A"
+    >
+      <div slot="left-sign">
+        <Icon symbol="wifi" color="#4EBF1A" level="2" />
+      </div>
+    </Row>
+
+    <Row
+      label="Conectado"
+      primaryColor="white"
+      bgColor="#4EBF1A"
+    />
+
+    <Row label="1 - Opção">
+      <div slot="right-sign">
+        <Switch/>
+      </div>
+      <div slot="description">
+        Mais uma opção de controle na hora da venda, essa etapa pode ser pulada
+      </div>
+    </Row>
   </Collection>
 
   <Collection title="Dispositivo">
     <Row label="2. Som do Teclado" rightLabel="Baixo">
-      <div slot="controller">
+      <div slot="right-sign">
         <Icon symbol="settings"/>
       </div>
     </Row>
     <Row label="3. Luz do Teclado">
-      <div slot="controller">
+      <div slot="right-sign">
         <Icon symbol="settings"/>
       </div>
     </Row>
@@ -18,7 +77,7 @@
 
   <Collection>
     <Row label="Rede Wifi Stone Co.">
-      <div slot="controller">
+      <div slot="right-sign">
         <Icon symbol="wifi" color="green" level={2}/>
       </div>
       <p slot="description">
@@ -26,7 +85,7 @@
       </p>
     </Row>
     <Row label="Rede Wifi Sharon" description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic maiores mollitia asperiores delectus, deleniti nobis fugiat quas eaque aspernatur atque ex voluptate modi fuga, iusto minus magni reprehenderit libero numquam.">
-      <div slot="controller">
+      <div slot="right-sign">
         <Icon symbol="wifi" color="green" level={0}/>
       </div>
     </Row>
@@ -46,6 +105,7 @@
       Icon: '@mamba/icon',
       Row: '@mamba/collection/Row.html',
       Collection: '@mamba/collection/Collection.html',
+      Switch: '@mamba/switch',
     },
   };
 </script>
