Remove ugly blue example

--- a/packages/components/Button/example/Example.html
+++ b/packages/components/Button/example/Example.html
@@ -40,15 +40,7 @@
   </div>
 
   <div class="row">
-    <Button primaryColor="blue">Label</Button>
-  </div>
-
-  <div class="row">
-    <Button primaryColor="blue" secondary>Label</Button>
-  </div>
-
-  <div class="row">
-    <Button primaryColor="blue" secondary disabled>Label</Button>
+    <Button primaryColor="#425963" secondary disabled>Label</Button>
   </div>
 
   <div class="row">
