Align @mamba/button style (#309)
* Refactor button classes and props

* Add button theme variables

* Remove unused class prop

* Remove ugly blue example

--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -24,7 +24,9 @@ $input-error-color: $red-light;
 $dialog-negative-color: $red-light;
 $dialog-positive-color: $stone-green;
 
-/** Switch component */
+$button-primary-color: $green;
+$button-text-color: $white;
+
 $switch-unchecked-bg: $silver;
 $switch-unchecked-color: $seashell;
 $switch-checked-bg: rgba($green, 0.5);
