Align @mamba/dialog style (#310)
* Make buttons better respect the primaryColor

* Add confirmation dialog theme variables

--- a/packages/styles/colors.pcss
+++ b/packages/styles/colors.pcss
@@ -7,9 +7,9 @@ $stone-green: #4fb341;
 $stone-green-dark: #153522;
 
 $gray-darker: #353535;
-$gray-dark: #494949;
+$gray-dark: #425963;
 $gray: #757575;
-$gray-light: #7e7e7e;
+$gray-light: #b5b5b5;
 $gray-lighter: #e3e6e7;
 $gray-lightest: #f1f2f3;
 $silver: #bab9b9;
