--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -23,6 +23,8 @@ $input-error-color: $red-light;
 /** Dialog component */
 $dialog-negative-color: $red-light;
 $dialog-positive-color: $stone-green;
+$dialog-confirmation-primary-color: $gray-dark;
+$dialog-confirmation-text-color: $white;
 
 $button-primary-color: $green;
 $button-text-color: $white;
