Align component visuals
<!--- Provide a general summary of your changes in the Title above -->

## Description
<!-- Set the Jira issue number on the link -->

[WEBSDK-536](https://stonepayments.atlassian.net/browse/WEBSDK-536)

--- a/packages/styles/colors.pcss
+++ b/packages/styles/colors.pcss
@@ -1,17 +1,22 @@
+$black: #000;
+
+$white: #fff;
+$seashell: #f1f1f1;
+
 $stone-green: #4fb341;
 $stone-green-dark: #153522;
 
 $gray-darker: #353535;
+$gray-dark: #425963;
 $gray: #757575;
+$gray-light: #b5b5b5;
 $gray-lighter: #e3e6e7;
 $gray-lightest: #f1f2f3;
+$silver: #bab9b9;
 
 $red-light: #e85b5b;
 
 /* --- */
-
-$black: #000;
-$white: #fff;
 
 $blue: #2196f3;
 $blue-dark: #1565c0;
@@ -24,9 +29,6 @@ $green: #4ebf1a;
 $grean-light: #4caf50;
 $green-dark: #3da10f;
 $green-payment: #429841;
-
-$gray-dark: #494949;
-$gray-light: #b5b5b5;
 
 $purple: #ab47bc;
 $purple-dark: #790e8b;
