--- a/packages/components/Collection/Row.html
+++ b/packages/components/Collection/Row.html
@@ -173,7 +173,7 @@
     border-bottom: 1px solid #e3e6e7;
   }
 
-  .row .row:last-child {
+  .row :global(.row):last-child {
     border-bottom: none;
   }
 
