--- a/packages/styles/colors.pcss
+++ b/packages/styles/colors.pcss
@@ -8,7 +8,7 @@ $stone-green-dark: #153522;
 
 $gray-darker: #353535;
 $gray-dark: #425963;
-$gray: #757575;
+$gray: #7e7e7e;
 $gray-light: #b5b5b5;
 $gray-lighter: #e3e6e7;
 $gray-lightest: #f1f2f3;
