--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -12,7 +12,7 @@ $default-text-color: $gray-darker;
 $row-border-color: $gray-lighter;
 $row-bg-color: $white;
 $row-primary-color: $gray-darker;
-$row-secondary-color: $gray-light;
+$row-secondary-color: $gray;
 
 /** Input component */
 $input-border-color: $gray-lighter;
