--- a/packages/components/Button/Button.html
+++ b/packages/components/Button/Button.html
@@ -54,9 +54,13 @@
     },
     oncreate() {
       if (this.options.data) {
-        const { shortcut } = this.options.data;
+        const { width, shortcut } = this.options.data;
         if (typeof shortcut !== 'undefined') {
           this.refs.button.setAttribute('shortcut', shortcut);
+        }
+
+        if (typeof width !== 'undefined' && width === '100%') {
+          this.set({ size: 'full' });
         }
       }
     },
