Add default-font-size to theme.pcss

--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -1,14 +1,12 @@
 @import 'colors.pcss';
 
-/** Spacing */
-$row-padding: 12px 15px;
+$default-text-color: $gray-darker;
+$default-font-size: 13px;
 
-/** Colors */
 $app-bg-color: $gray-lighter;
 
-$default-text-color: $gray-darker;
-
 /** Row component */
+$row-padding: 12px 15px;
 $row-border-color: $gray-lighter;
 $row-bg-color: $white;
 $row-primary-color: $gray-darker;
