--- a/packages/styles/src/includes/base.pcss
+++ b/packages/styles/src/includes/base.pcss
@@ -10,7 +10,7 @@
 
 html {
   height: 100%;
-  font-size: 14px;
+  font-size: $default-font-size;
   font-family: 'Roboto', 'Arial', sans-serif;
 }
 
