Refactor prepend import plugin

--- a/packages/components/Collection/Row.html
+++ b/packages/components/Collection/Row.html
@@ -164,13 +164,11 @@
 </script>
 
 <style type="text/postcss">
-  @import '@mamba/styles/theme.pcss';
-
   .row {
     margin: 0;
     background: #fff;
     color: $row-primary-color;
-    border-bottom: 1px solid #e3e6e7;
+    border-bottom: 1px solid $row-border-color;
   }
 
   .row :global(.row):last-child {
