Simplify the control panel. Leave the registry logic to each panel

--- a/packages/pos/simulator/view/pos/ControlPanel.html
+++ b/packages/pos/simulator/view/pos/ControlPanel.html
@@ -2,21 +2,20 @@
 
 <div class="panel-wrapper">
   <input ref:toggle type="checkbox" class="panel-checkbox" id="panel-toggler">
-  <label for="panel-toggler" class="panel-toggle">⚙</label>
-  <div class="panel">
-      {#each Object.values(panels) as {namespace, panel}}
-        <div class="section">
-          <svelte:component
-            this={panel}
-            {...Registry.get()[namespace]}
-          />
-        </div>
-      {/each}
+  <label for="panel-toggler" class="panel-toggle">&#x2699;</label>
+  <div class="panel" ref:panel>
+    {#each panels as panel}
+      <div class="section">
+        <svelte:component this={panel} />
+      </div>
+    {/each}
   </div>
 </div>
 
 <script>
-  import { Registry } from '../../index.js';
+  import GeneralPanel from './panels/General.html';
+  import PrinterPanel from './panels/Printer.html';
+  import HttpPanel from './panels/Http.html';
 
   let lastKeypressTime = 0;
 
@@ -24,29 +23,25 @@
     components: {
       Keystroke: '@mamba/app/Keystroke.html',
     },
-    helpers: {
-      Registry,
-    },
     data() {
       return {
-        panels: {},
+        panels: [GeneralPanel, PrinterPanel, HttpPanel],
       };
     },
     oncreate() {
-      Registry.on('dataChanged', changes => {
-        const hasMods = changes.some(
-          change => change.op === 'replace' && change.path.length > 1,
-        );
-
-        /**
-         * TODO: this is... okay, but not optimal.
-         * For every non-shallow (more than one property deep) registry update,
-         * the whole panel list is updates
-         */
-        if (hasMods) {
-          const { panels } = this.get();
-          this.set({ panels: { ...panels } });
+      const togglePanels = e => {
+        if (e.target.classList.contains('title')) {
+          const eventPath = e.path || (e.composedPath && e.composedPath());
+          const section = eventPath.find(n => n.classList.contains('section'));
+          if (section) {
+            section.classList.toggle('is-active');
+          }
         }
+      };
+
+      this.refs.panel.addEventListener('click', togglePanels);
+      this.on('destroy', () => {
+        this.refs.panel.removeEventListener('click', togglePanels);
       });
     },
     methods: {
@@ -135,19 +130,45 @@
     }
 
     :global(.title) {
+      cursor: pointer;
       font-weight: bold;
       border-bottom: 1px dotted #ccc;
       font-size: 18px;
       line-height: 1;
       padding-bottom: 5px;
+      transition: transform 0.3s ease;
+      transform-origin: 0 50%;
+
+      &:hover {
+        transform: scale(1.05);
+      }
     }
 
-    :global(textarea) {
+    :global(textarea),
+    :global(input) {
       width: 100%;
       border-radius: 3px;
       border: none;
-      border-bottom: 1px solid #e3e6e7;
+      border-left: 3px solid #e3e6e7;
+      padding: 8px 5px;
+      transition: background-color 0.3s ease;
+    }
+
+    :global(textarea) {
       background-color: #f5f7f7;
+    }
+
+    :global(input) {
+      background-color: #fff;
+
+      &:hover,
+      &:focus {
+        background-color: #f5f7f7;
+      }
+    }
+
+    :global(.controllers) {
+      transition: opacity 0.3s ease, visibility 0.3s ease;
     }
 
     :global(.controller) {
@@ -181,6 +202,19 @@
   }
 
   .section {
+    &:not(.is-active) {
+      :global(.title) {
+        border-bottom: none;
+      }
+
+      :global(.controllers) {
+        transition: none;
+        opacity: 0;
+        height: 0;
+        visibility: hidden;
+      }
+    }
+
     & + .section {
       margin-top: 25px;
     }
