Listen to route change on root event instead of a event of the router itself

--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -72,24 +72,18 @@
         root.close();
       });
 
-      /* istanbul ignore next */
-      if (root.router) {
-        root.router.on('update', ({ changed, previous }) => {
-          /* istanbul ignore next */
-          if (changed.context && previous) {
-            /**
-             * Check for __browser__ for scrolling the virtual screen
-             * instead of the <html> element
-             * */
-            /* istanbul ignore else */
-            if (__BROWSER__ && window.innerWidth > 401) {
-              root.options.target.scrollTo(0, 0);
-            } else {
-              window.scrollTo(0, 0);
-            }
-          }
-        });
-      }
+      root.on('router:change', () => {
+        /**
+         * Check for __browser__ for scrolling the virtual screen
+         * instead of the <html> element
+         * */
+        /* istanbul ignore else */
+        if (__BROWSER__ && window.innerWidth > 401) {
+          root.options.target.scrollTo(0, 0);
+        } else {
+          window.scrollTo(0, 0);
+        }
+      });
     },
     onstate({ previous }) {
       /** Set a reference on the root component to the <App/> meta component */
