Make enter go from home to lock screen

--- a/packages/pos/simulator/view/pos/apps/Launcher.html
+++ b/packages/pos/simulator/view/pos/apps/Launcher.html
@@ -37,6 +37,7 @@
       </div>
       <Keystroke key="back" on:keystroke="gotoLockscreen()" />
       <Keystroke key="close" on:keystroke="gotoLockscreen()" />
+      <Keystroke key="enter" on:keystroke="gotoLockscreen()" />
     {/if}
   </div>
 {/if}
